# Contém informações sobre o pacote, como nome, versão, autor, descrição e classificações.
[metadata]
name = my_package
version = 0.1.0
author = Seu Nome
author_email = seu_email@example.com
description = Uma breve descrição do seu pacote
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/brunovlima/i.a_company
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# Define opções como pacotes a serem incluídos, versão mínima do Python e dependências necessárias.
[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    numpy

# Especifica dependências adicionais para desenvolvimento e testes
[options.extras_require]
dev =
    check-manifest
    flake8
test =
    pytest

# Inclui arquivos adicionais no pacote.
[options.package_data]
* = *.txt, *.rst

# Define scripts de console que podem ser executados a partir da linha de comando.
[options.entry_points]
console_scripts =
    my_command = my_package.module:function

# Configurações para formatação de código.
[flake8]
max-line-length = 120

# Configurações para ferramentas de linting
[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
